@@ -346,6 +346,13 @@ footer.entry-meta {
 	margin-bottom:20px;
 }
 
+/* =Full-width page template
+----------------------------------------------- */
+
+.page-template-page-fullwidth-php #primary {
+	padding: 0;
+}
+
 /* =Post Navigation
 ----------------------------------------------- */
 
