@@ -819,6 +819,12 @@ footer.entry-meta {
   margin-bottom: 20px;
 }
 
+/* =Full-width page template
+----------------------------------------------- */
+.page-template-page-fullwidth-php #primary {
+  padding: 0;
+}
+
 /* =Post Navigation
 ----------------------------------------------- */
 #nav-below {
